# BOA

./: .gitignore  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PROGRESS.md  README.md  alembic.ini  boa.db-shm  boa.db-wal  boa_unified_implementation_98677eae.plan.md  demo.py  docker-compose.yml  pyproject.toml
docs/: index.md
docs/guides/: api-reference.md  getting-started.md  multi-objective.md
examples/: README.md  mixed_space_optimization.py  multi_objective_optimization.py  simple_optimization.py
src/boa/: __init__.py
src/boa/benchmarks/: __init__.py  base.py  dtlz.py  runner.py  zdt.py
src/boa/cli/: __init__.py  export_import.py  main.py
src/boa/core/: __init__.py  analyzer.py  checkpointer.py  engine.py  executor.py  ledger.py
src/boa/db/: __init__.py  connection.py  job_queue.py  models.py  repository.py
src/boa/db/migrations/: __init__.py  env.py
src/boa/db/migrations/versions/: 001_initial.py  __init__.py
src/boa/plugins/: __init__.py  base.py  registry.py
src/boa/plugins/builtin/: __init__.py  acquisitions.py  constraints.py  models.py  samplers.py
src/boa/sdk/: __init__.py  campaign.py  client.py  exceptions.py
src/boa/server/: __init__.py  app.py  config.py  deps.py  schemas.py
src/boa/server/routes/: __init__.py  campaigns.py  jobs.py  observations.py  processes.py  proposals.py
src/boa/spec/: __init__.py  encoder.py  loader.py  models.py  validators.py
src/mobo_kit/: utils.py
tests/: conftest.py
tests/test_boa/: __init__.py
tests/test_boa/benchmarks/: __init__.py  test_benchmarks.py  test_runner.py
tests/test_boa/cli/: __init__.py  conftest.py  test_cli.py  test_export_import.py
tests/test_boa/core/: __init__.py  conftest.py  test_analyzer.py  test_checkpointer.py  test_engine.py  test_executor.py  test_ledger.py
tests/test_boa/db/: __init__.py  conftest.py  test_job_queue.py  test_models.py  test_repository.py
tests/test_boa/plugins/: __init__.py  test_models.py  test_registry.py  test_samplers.py
tests/test_boa/sdk/: __init__.py  test_campaign.py  test_client.py
tests/test_boa/server/: __init__.py  conftest.py  test_campaigns.py  test_health.py  test_observations.py  test_processes.py  test_proposals.py
tests/test_boa/spec/: __init__.py  test_encoder.py  test_loader.py  test_models.py
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/api/: client.ts
ui/src/components/: Layout.tsx  ProcessBuilder.tsx
ui/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  progress.tsx  scroll-area.tsx  select.tsx  separator.tsx  table.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
ui/src/hooks/: useApi.ts
ui/src/pages/: CampaignDetail.tsx  CampaignNew.tsx  Campaigns.tsx  Dashboard.tsx  ProcessDetail.tsx  ProcessNew.tsx  Processes.tsx
